fill tool added.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <img src="color.png" onclick="myFunction()" alt="color image">
                 <input type="color" style="display: none;" id="fontColorButton" value="#000000">
             </div>
+            <div class="fill tool-effect">
+                <img src="fill.png" alt="color image">
+            </div>
         </div>
         <div class="container" id="wrapper">
             <div class="cell"></div>
